Archive2/51/2a879c6f0cd813/output
main.cpp:8:10: error: default arguments cannot be added to a function template that has already been declared
void f(T t = T()) {}
         ^   ~~~
main.cpp:4:17: note: previous template declaration is here
    friend void f(T t);
                ^
1 error generated.
